--- a/通用基础大语言模型.md
+++ b/通用基础大语言模型.md
@@ -1,6 +1,7 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
 | OpenAI  | OpenAI |OpenAI |OpenAI |OpenAI |
+| 《Let’s Verify Step by Step》| arxiv2023| OpenAI的过程监督方法：<br/>1 过程监督可以训练出比结果监督更可靠的奖励模型；<br/>2 对于较小的reward model，大reward model可以可靠地近似于人类监督，并且可以用于有效地进行大规模数据收集消融；<br/>3 主动学习可以使过程监督的数据效率提高2.6倍；<br/>4 发布了全过程监督数据集PRM800K，以促进相关研究| NULL | https://zhuanlan.zhihu.com/p/633953745 |
 | 《Improving Language Understanding by Generative Pre-Training》  | 2018，没发表？ |OpenAI GPT：<br/> 先于BERT提出Pre-train+Fine-tuning范式; |done |NULL |
 | 《Language Models are Unsupervised Multitask Learners》  | 2019，没发表？ |GPT-2：<br/>数据集WebText；<br/>Train一个参数超大的语言模型，实现Zero-shot效果；<br/>没有Fine-tuning过程； |done |NULL |
 | 《Language Models are Few-Shot Learners》  | NULL |GPT-3：<br/>实现few-shot和one-shot，不需要梯度更新；<br/>可以Fine-tuning，但paper中，没用Fine-tuning；<br/>one-shot和few-shot体现在输入中，而不会用来微调，可以参考paper中的Figure 2.1； |done |NULL |
@@ -10,6 +11,7 @@
 | 《Scaling Instruction-Finetuned Language Models》| arXiv2022| Google的FLAN：<br/> Instruct tuning；<br/>基于PaLM和T5进行的实验；| NULL | NULL |
 | 《LaMDA: Language Models for Dialog Applications》| arxiv2022| 谷歌大脑的LaMDA语言模型：<br/>1 训练范式相对简单，pretrain+finetune（对比InstructGPT的SFT+RM+RLHF）；<br/>2 引入了检索结果；<br/>3 对回复的评价测量，Quality，Safty，Groundedness（对应InstructGPT的helpful，harmfulless，honest）；| NULL | NULL |
 | DeepMind  | DeepMind |DeepMind |DeepMind |DeepMind |
+| 《Solving math word problems with processand outcome-based feedback》| arxiv2022| DeepMind优化大模型解决数学问题的能力：<br/>1 Outcome-based and process-based approaches lead to similar final-answer error rates（这个结论和OpenAI的结论是不一致的）；<br/>2 Both process- and outcome-supervised reward models learn to emulate process-based feedback；<br/>3 Low trace error requires either process-based feedback, or a reward model that emulates it；| NULL | NULL |
 | 《Improving alignment of dialogue agents via targeted human judgements》| arxiv2022| DeepMind的Sparrow语言模型：<br/>1 融合了Lambda模型的外部知识，和InstructGPT的RLHF；<br/>2 基础模型基于Chinchilla；| NULL | NULL |
 | Meta  | Meta |Meta |Meta |Meta |
 | 《LLaMA: Open and Efficient Foundation Language Models》| facebook research 2023| Meta的LLaMA模型：<br/>1 Meta的高效率大模型（参数更小）；<br/>2 LLaMA-13B对标GPT-3(175B)；<br/>3 LLaMA-65B对标Chinchilla70B and PaLM-540B；<br/>4 核心是数据量的和计算量的提升（原理和Deepmind的Chinchilla基本一致）；| NULL | https://mp.weixin.qq.com/s/MbZTfVgxx221Eo9pl1h80w |
