--- a/论文汇总.md
+++ b/论文汇总.md
@@ -3,9 +3,9 @@
 | NULL |NULL |
 | NULL |NULL |
 | NULL |NULL |
-| NULL |NULL |
-| NULL |NULL |
-| NULL |NULL |
+| 《ReWOO: Decoupling Reasoning from Observations for Efficient Augmented Language Models》 |大模型增强与应用 |
+| 《Let’s Verify Step by Step》 |通用基础大语言模型 |
+| 《Solving math word problems with processand outcome-based feedback》 |通用基础大语言模型 |
 | 《LLMs for Knowledge Graph Construction and Reasoning: Recent Capabilities and Future Opportunities》 |大模型增强与应用 |
 | 《Unlimiformer: Long-Range Transformers with Unlimited Length Input》 |大模型增强与应用 |
 | 《AlpacaFarm: A Simulation Framework for Methods that Learn from Human Feedback》 |通用基础大语言模型 |
