--- a/论文汇总.md
+++ b/论文汇总.md
@@ -3,6 +3,15 @@
 | NULL |NULL |
 | NULL |NULL |
 | NULL |NULL |
+| NULL |NULL |
+| NULL |NULL |
+| NULL |NULL |
+| NULL |NULL |
+| NULL |NULL |
+| NULL |NULL |
+| NULL |NULL |
+| NULL |NULL |
+| NULL |NULL |
 | 《ReWOO: Decoupling Reasoning from Observations for Efficient Augmented Language Models》 |大模型增强与应用 |
 | 《Let’s Verify Step by Step》 |通用基础大语言模型 |
 | 《Solving math word problems with processand outcome-based feedback》 |通用基础大语言模型 |
