--- a/论文汇总.md
+++ b/论文汇总.md
@@ -3,15 +3,15 @@
 | NULL |NULL |
 | NULL |NULL |
 | NULL |NULL |
-| NULL |NULL |
-| NULL |NULL |
-| NULL |NULL |
-| NULL |NULL |
-| NULL |NULL |
-| NULL |NULL |
-| NULL |NULL |
-| NULL |NULL |
-| NULL |NULL |
+| 《TALM: Tool Augmented Language Models》 |大模型增强与应用 |
+| 《MRKL Systems：A modular, neuro-symbolic architecture that combines large language models, external knowledge sources and discrete reasoning》 |大模型增强与应用 |
+| 《LLM Powered Autonomous Agents》 |大模型增强与应用 |
+| 《Reflexion: Language Agents with Verbal Reinforcement Learning》 |大模型增强与应用 |
+| 《Do As I Can, Not As I Say:Grounding Language in Robotic Affordances》 |大模型增强与应用 |
+| 《OpenAGI: When LLM Meets Domain Experts》 |大模型增强与应用 |
+| 《Gorilla: Large Language Model Connected with Massive APIs》 |大模型增强与应用 |
+| 《TaskMatrix.AI: Completing Tasks by Connecting Foundation Models with Millions of APIs》 |大模型增强与应用 |
+| 《ToolAlpaca: Generalized Tool Learning for Language Models with 3000 Simulated Cases》 |大模型增强与应用 |
 | 《ReWOO: Decoupling Reasoning from Observations for Efficient Augmented Language Models》 |大模型增强与应用 |
 | 《Let’s Verify Step by Step》 |通用基础大语言模型 |
 | 《Solving math word problems with processand outcome-based feedback》 |通用基础大语言模型 |
