--- a/论文汇总.md
+++ b/论文汇总.md
@@ -3,6 +3,8 @@
 | NULL |NULL |
 | NULL |NULL |
 | NULL |NULL |
+| 《GLM: General Language Model Pretraining with Autoregressive Blank Infilling》 |NULL |
+| 《VoxPoser: Composable 3D Value Maps for Robotic Manipulation with Language Models》 |大模型增强与应用 |
 | 《TALM: Tool Augmented Language Models》 |大模型增强与应用 |
 | 《MRKL Systems：A modular, neuro-symbolic architecture that combines large language models, external knowledge sources and discrete reasoning》 |大模型增强与应用 |
 | 《LLM Powered Autonomous Agents》 |大模型增强与应用 |
@@ -40,7 +42,7 @@
 | 《Delta Tuning: A Comprehensive Study of Parameter Efficient Methods for Pre-trained Language Models》 |大模型增强与应用 |
 | 《Learning to summarize from human feedback》 |摘要生成 |
 | 《Recursively Summarizing Books with Human Feedback》 |摘要生成 |
-| 《ChatGPT for Robotics:Design Principles and Model Abilities》 |其他 |
+| 《ChatGPT for Robotics:Design Principles and Model Abilities》 |大模型增强与应用 |
 | 《Learning by Distilling Context》 |大模型增强 |
 | 《LLaMA: Open and Efficient Foundation Language Models》 |通用基础大语言模型 |
 | 《LARGE LANGUAGE MODELS ARE HUMAN-LEVEL PROMPT ENGINEERS》 |大模型增强与应用 |
