--- a/论文汇总.md
+++ b/论文汇总.md
@@ -3,7 +3,7 @@
 | NULL |NULL |
 | NULL |NULL |
 | NULL |NULL |
-| 《GLM: General Language Model Pretraining with Autoregressive Blank Infilling》 |NULL |
+| 《GLM: General Language Model Pretraining with Autoregressive Blank Infilling》 |文本预训练模型 |
 | 《VoxPoser: Composable 3D Value Maps for Robotic Manipulation with Language Models》 |大模型增强与应用 |
 | 《TALM: Tool Augmented Language Models》 |大模型增强与应用 |
 | 《MRKL Systems：A modular, neuro-symbolic architecture that combines large language models, external knowledge sources and discrete reasoning》 |大模型增强与应用 |
