--- a/论文汇总.md
+++ b/论文汇总.md
@@ -3,6 +3,12 @@
 | NULL |NULL |
 | NULL |NULL |
 | NULL |NULL |
+| 《TOOLLLM: FACILITATING LARGE LANGUAGE MODELS TO MASTER 16000+ REAL-WORLD APIS》 |大模型增强与应用 |
+| 《Android in the Wild: A Large-Scale Dataset for Android Device Control》 |大模型增强与应用 |
+| 《TOWARDS A UNIFIED AGENT WITH FOUNDATION MODELS》 |大模型增强与应用 |
+| 《RT-1: ROBOTICS TRANSFORMER FOR REAL-WORLD CONTROL AT SCALE》 |大模型增强与应用 |
+| 《RoboCat: A Self-Improving Foundation Agent for Robotic Manipulation》 |大模型增强与应用 |
+| 《PaLM-E: An Embodied Multimodal Language Model》 |大模型增强与应用 |
 | 《GLM: General Language Model Pretraining with Autoregressive Blank Infilling》 |文本预训练模型 |
 | 《VoxPoser: Composable 3D Value Maps for Robotic Manipulation with Language Models》 |大模型增强与应用 |
 | 《TALM: Tool Augmented Language Models》 |大模型增强与应用 |
