--- a/论文汇总.md
+++ b/论文汇总.md
@@ -3,6 +3,9 @@
 | NULL |NULL |
 | NULL |NULL |
 | NULL |NULL |
+| 《Making Language Models Better Tool Learners with Execution Feedback》 |大模型增强与应用 |
+| 《ToolkenGPT: Augmenting Frozen Language Models with Massive Tools via Tool Embeddings》 |大模型增强与应用 |
+| 《Tool Documentation Enables Zero-Shot Tool-Usage with Large Language Models》 |大模型增强与应用 |
 | 《TOOLLLM: FACILITATING LARGE LANGUAGE MODELS TO MASTER 16000+ REAL-WORLD APIS》 |大模型增强与应用 |
 | 《Android in the Wild: A Large-Scale Dataset for Android Device Control》 |大模型增强与应用 |
 | 《TOWARDS A UNIFIED AGENT WITH FOUNDATION MODELS》 |大模型增强与应用 |
