--- a/世界模型.md
+++ b/世界模型.md
@@ -1,3 +1,4 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
 | NULL  | NULL |NULL |NULL |NULL |
+| 《A Path Towards Autonomous Machine Intelligence》 | 2022| LeCun关于AGI的思考：<br/>1 核心的系统组成：<br/>-Configurator<br/>-Short-term memory<br/>-World Model<br/>-Actor<br/>-Perception<br/>-Cost<br/>2 世界模型的核心不是对三维空间和世界的理解，而是对未来的预测。通过世界模型来帮助决策模型进行优化；<br/>3 没太理解的问题：<br/>-Config模块是如何工作的？如何参与到参数调整？<br/>-能量损失部分没看懂<br/>-Model1和Model2在实际应用中何时觉得该由哪一个输出Action？<br/>-Collapse部分没看懂<br/>-Contrastive sample vs Regularation没太看懂| NULL | https://mp.weixin.qq.com/s/JUlhu95uFsY0c5WjJOJl3g |
