--- a/论文汇总.md
+++ b/论文汇总.md
@@ -3,58 +3,58 @@
 | NULL |NULL |
 | NULL |NULL |
 | NULL |NULL |
-| 《Making Language Models Better Tool Learners with Execution Feedback》 |大模型增强与应用 |
-| 《ToolkenGPT: Augmenting Frozen Language Models with Massive Tools via Tool Embeddings》 |大模型增强与应用 |
-| 《Tool Documentation Enables Zero-Shot Tool-Usage with Large Language Models》 |大模型增强与应用 |
-| 《TOOLLLM: FACILITATING LARGE LANGUAGE MODELS TO MASTER 16000+ REAL-WORLD APIS》 |大模型增强与应用 |
-| 《Android in the Wild: A Large-Scale Dataset for Android Device Control》 |大模型增强与应用 |
-| 《TOWARDS A UNIFIED AGENT WITH FOUNDATION MODELS》 |大模型增强与应用 |
-| 《RT-1: ROBOTICS TRANSFORMER FOR REAL-WORLD CONTROL AT SCALE》 |大模型增强与应用 |
-| 《RoboCat: A Self-Improving Foundation Agent for Robotic Manipulation》 |大模型增强与应用 |
-| 《PaLM-E: An Embodied Multimodal Language Model》 |大模型增强与应用 |
+| 《Making Language Models Better Tool Learners with Execution Feedback》 |文本大模型增强与应用 |
+| 《ToolkenGPT: Augmenting Frozen Language Models with Massive Tools via Tool Embeddings》 |文本大模型增强与应用 |
+| 《Tool Documentation Enables Zero-Shot Tool-Usage with Large Language Models》 |文本大模型增强与应用 |
+| 《TOOLLLM: FACILITATING LARGE LANGUAGE MODELS TO MASTER 16000+ REAL-WORLD APIS》 |文本大模型增强与应用 |
+| 《Android in the Wild: A Large-Scale Dataset for Android Device Control》 |文本大模型增强与应用 |
+| 《TOWARDS A UNIFIED AGENT WITH FOUNDATION MODELS》 |具身智能 |
+| 《RT-1: ROBOTICS TRANSFORMER FOR REAL-WORLD CONTROL AT SCALE》 |具身智能 |
+| 《RoboCat: A Self-Improving Foundation Agent for Robotic Manipulation》 |具身智能 |
+| 《PaLM-E: An Embodied Multimodal Language Model》 |具身智能 |
 | 《GLM: General Language Model Pretraining with Autoregressive Blank Infilling》 |文本预训练模型 |
-| 《VoxPoser: Composable 3D Value Maps for Robotic Manipulation with Language Models》 |大模型增强与应用 |
-| 《TALM: Tool Augmented Language Models》 |大模型增强与应用 |
-| 《MRKL Systems：A modular, neuro-symbolic architecture that combines large language models, external knowledge sources and discrete reasoning》 |大模型增强与应用 |
-| 《LLM Powered Autonomous Agents》 |大模型增强与应用 |
-| 《Reflexion: Language Agents with Verbal Reinforcement Learning》 |大模型增强与应用 |
-| 《Do As I Can, Not As I Say:Grounding Language in Robotic Affordances》 |大模型增强与应用 |
-| 《OpenAGI: When LLM Meets Domain Experts》 |大模型增强与应用 |
-| 《Gorilla: Large Language Model Connected with Massive APIs》 |大模型增强与应用 |
-| 《TaskMatrix.AI: Completing Tasks by Connecting Foundation Models with Millions of APIs》 |大模型增强与应用 |
-| 《ToolAlpaca: Generalized Tool Learning for Language Models with 3000 Simulated Cases》 |大模型增强与应用 |
-| 《ReWOO: Decoupling Reasoning from Observations for Efficient Augmented Language Models》 |大模型增强与应用 |
+| 《VoxPoser: Composable 3D Value Maps for Robotic Manipulation with Language Models》 |具身智能 |
+| 《TALM: Tool Augmented Language Models》 |文本大模型增强与应用 |
+| 《MRKL Systems：A modular, neuro-symbolic architecture that combines large language models, external knowledge sources and discrete reasoning》 |文本大模型增强与应用 |
+| 《LLM Powered Autonomous Agents》 |文本大模型增强与应用 |
+| 《Reflexion: Language Agents with Verbal Reinforcement Learning》 |文本大模型增强与应用 |
+| 《Do As I Can, Not As I Say:Grounding Language in Robotic Affordances》 |具身智能 |
+| 《OpenAGI: When LLM Meets Domain Experts》 |文本大模型增强与应用 |
+| 《Gorilla: Large Language Model Connected with Massive APIs》 |文本大模型增强与应用 |
+| 《TaskMatrix.AI: Completing Tasks by Connecting Foundation Models with Millions of APIs》 |文本大模型增强与应用 |
+| 《ToolAlpaca: Generalized Tool Learning for Language Models with 3000 Simulated Cases》 |文本大模型增强与应用 |
+| 《ReWOO: Decoupling Reasoning from Observations for Efficient Augmented Language Models》 |文本大模型增强与应用 |
 | 《Let’s Verify Step by Step》 |通用基础大语言模型 |
 | 《Solving math word problems with processand outcome-based feedback》 |通用基础大语言模型 |
-| 《LLMs for Knowledge Graph Construction and Reasoning: Recent Capabilities and Future Opportunities》 |大模型增强与应用 |
-| 《Unlimiformer: Long-Range Transformers with Unlimited Length Input》 |大模型增强与应用 |
+| 《LLMs for Knowledge Graph Construction and Reasoning: Recent Capabilities and Future Opportunities》 |文本大模型增强与应用 |
+| 《Unlimiformer: Long-Range Transformers with Unlimited Length Input》 |文本大模型增强与应用 |
 | 《AlpacaFarm: A Simulation Framework for Methods that Learn from Human Feedback》 |通用基础大语言模型 |
 | 《PaLM 2 Technical Report》 |通用基础大语言模型 |
 | 《GPT-4 Technical Report》 |通用基础大语言模型 |
 | 《Deep Reinforcement Learning from Human Preferences》 |通用基础大语言模型 |
 | 《A Survey of Large Language Models》 |通用基础大语言模型 |
-| 《Toolformer: Language Models Can Teach Themselves to Use Tools》 |大模型增强与应用 |
+| 《Toolformer: Language Models Can Teach Themselves to Use Tools》 |文本大模型增强与应用 |
 | 《A Cookbook of Self-Supervised Learning》 |图像预训练模型 |
 | 《RRHF: Rank Responses to Align Language Models with Human Feedback without tears》 |通用基础大语言模型 |
 | 《OpenAssistant Conversations - Democratizing Large Language Model Alignment》 |通用基础大语言模型 |
-| 《Tool Learning with Foundation Models》 |大模型增强与应用 |
-| 《WebGPT: Browser-assisted question-answering with human feedback》 |大模型增强与应用 |
-| 《REACT: SYNERGIZING REASONING AND ACTING IN LANGUAGE MODELS》 |大模型增强与应用 |
-| 《HuggingGPT: Solving AI Tasks with ChatGPT and its Friends in Hugging Face》 |大模型增强与应用 |
+| 《Tool Learning with Foundation Models》 |文本大模型增强与应用 |
+| 《WebGPT: Browser-assisted question-answering with human feedback》 |文本大模型增强与应用 |
+| 《REACT: SYNERGIZING REASONING AND ACTING IN LANGUAGE MODELS》 |文本大模型增强与应用 |
+| 《HuggingGPT: Solving AI Tasks with ChatGPT and its Friends in Hugging Face》 |文本大模型增强与应用 |
 | 《OPT: Open Pre-trained Transformer Language Models》 |文本预训练模型 |
 | 《BLOOM: A 176B-Parameter Open-Access Multilingual Language Model》 |文本预训练模型 |
 | 《BloombergGPT: A Large Language Model for Finance》 |文本预训练模型 |
-| 《Check Your Facts and Try Again: Improving Large Language Models with External Knowledge and Automated Feedback》 |大模型增强与应用 |
+| 《Check Your Facts and Try Again: Improving Large Language Models with External Knowledge and Automated Feedback》 |文本大模型增强与应用 |
 | 《Training a Helpful and Harmless Assistant with Reinforcement Learning from Human Feedback》 |通用基础大语言模型 |
-| 《Augmented Language Models: a Survey》 |大模型增强与应用 |
-| 《OpenPrompt: An Open-source Framework for Prompt-learning》 |大模型增强与应用 |
-| 《Delta Tuning: A Comprehensive Study of Parameter Efficient Methods for Pre-trained Language Models》 |大模型增强与应用 |
+| 《Augmented Language Models: a Survey》 |文本大模型增强与应用 |
+| 《OpenPrompt: An Open-source Framework for Prompt-learning》 |文本大模型增强与应用 |
+| 《Delta Tuning: A Comprehensive Study of Parameter Efficient Methods for Pre-trained Language Models》 |文本大模型增强与应用 |
 | 《Learning to summarize from human feedback》 |摘要生成 |
 | 《Recursively Summarizing Books with Human Feedback》 |摘要生成 |
-| 《ChatGPT for Robotics:Design Principles and Model Abilities》 |大模型增强与应用 |
+| 《ChatGPT for Robotics:Design Principles and Model Abilities》 |具身智能 |
 | 《Learning by Distilling Context》 |大模型增强 |
 | 《LLaMA: Open and Efficient Foundation Language Models》 |通用基础大语言模型 |
-| 《LARGE LANGUAGE MODELS ARE HUMAN-LEVEL PROMPT ENGINEERS》 |大模型增强与应用 |
+| 《LARGE LANGUAGE MODELS ARE HUMAN-LEVEL PROMPT ENGINEERS》 |文本大模型增强与应用 |
 | 《Recipes for building an open-domain chatbot》 |闲聊对话&开放域问答 |
 | 《Poly-encoders: architectures and pre-training strategies for fast and accurate multi-sentence scoring》 |文本相似度计算 |
 | 《PEER: A Collaborative Language Model》 |通用基础大语言模型 |
