--- a/论文汇总.md
+++ b/论文汇总.md
@@ -27,7 +27,7 @@
 | 《Let’s Verify Step by Step》 |通用基础大语言模型 |
 | 《Solving math word problems with processand outcome-based feedback》 |通用基础大语言模型 |
 | 《LLMs for Knowledge Graph Construction and Reasoning: Recent Capabilities and Future Opportunities》 |文本大模型增强与应用 |
-| 《Unlimiformer: Long-Range Transformers with Unlimited Length Input》 |文本大模型增强与应用 |
+| 《Unlimiformer: Long-Range Transformers with Unlimited Length Input》 |文本长度扩展 |
 | 《AlpacaFarm: A Simulation Framework for Methods that Learn from Human Feedback》 |通用基础大语言模型 |
 | 《PaLM 2 Technical Report》 |通用基础大语言模型 |
 | 《GPT-4 Technical Report》 |通用基础大语言模型 |
