--- a/论文汇总.md
+++ b/论文汇总.md
@@ -3,6 +3,12 @@
 | NULL |NULL |
 | NULL |NULL |
 | NULL |NULL |
+| NULL |NULL |
+| NULL |NULL |
+| 《A Survey on Large Language Model based Autonomous Agents》 |文本大模型增强与应用 |
+| 《EXTENDING CONTEXT WINDOW OF LARGE LANGUAGE MODELS VIA POSITION INTERPOLATION》 |文本长度扩展 |
+| 《ROFORMER: ENHANCED TRANSFORMER WITH ROTARY POSITION EMBEDDING》 |文本长度扩展 |
+| 《GLaM: Efficient Scaling of Language Models with Mixture-of-Experts》 |MOE |
 | 《Making Language Models Better Tool Learners with Execution Feedback》 |文本大模型增强与应用 |
 | 《ToolkenGPT: Augmenting Frozen Language Models with Massive Tools via Tool Embeddings》 |文本大模型增强与应用 |
 | 《Tool Documentation Enables Zero-Shot Tool-Usage with Large Language Models》 |文本大模型增强与应用 |
