--- a/论文汇总.md
+++ b/论文汇总.md
@@ -2,9 +2,9 @@
 | ----  |----  | 
 | NULL |NULL |
 | NULL |NULL |
-| NULL |NULL |
-| NULL |NULL |
-| NULL |NULL |
+| 《SELF-RAG: LEARNING TO RETRIEVE, GENERATE, AND CRITIQUE THROUGH SELF-REFLECTION》 |文本大模型增强与应用 |
+| 《OpenAgents: AN OPEN PLATFORM FOR LANGUAGE AGENTS IN THE WILD》 |文本大模型增强与应用 |
+| 《RestGPT: Connecting Large Language Models with Real-World RESTful APIs》 |文本大模型增强与应用 |
 | 《A Survey on Large Language Model based Autonomous Agents》 |文本大模型增强与应用 |
 | 《EXTENDING CONTEXT WINDOW OF LARGE LANGUAGE MODELS VIA POSITION INTERPOLATION》 |文本长度扩展 |
 | 《ROFORMER: ENHANCED TRANSFORMER WITH ROTARY POSITION EMBEDDING》 |文本长度扩展 |
