--- a/论文汇总.md
+++ b/论文汇总.md
@@ -1,7 +1,14 @@
 |  名称   | 目录  |
 | ----  |----  | 
-| NULL |NULL |
-| NULL |NULL |
+|NULL |NULL |
+|NULL |NULL |
+|NULL |NULL |
+|NULL |NULL |
+|NULL |NULL |
+|NULL |NULL |
+| 《T-Eval: Evaluating the Tool Utilization Capability of Large Language Models Step by Step》 |文本大模型评测 |
+| 《TASKBENCH: BENCHMARKING LARGE LANGUAGE MODELS FOR TASK AUTOMATION》 |文本大模型评测 |
+|《GPT-FATHOM: BENCHMARKING LARGE LANGUAGE MODELS TO DECIPHER THE EVOLUTIONARY PATH TOWARDS GPT-4 AND BEYOND》|文本大模型评测|
 | 《SELF-RAG: LEARNING TO RETRIEVE, GENERATE, AND CRITIQUE THROUGH SELF-REFLECTION》 |文本大模型增强与应用 |
 | 《OpenAgents: AN OPEN PLATFORM FOR LANGUAGE AGENTS IN THE WILD》 |文本大模型增强与应用 |
 | 《RestGPT: Connecting Large Language Models with Real-World RESTful APIs》 |文本大模型增强与应用 |
