--- a/论文汇总.md
+++ b/论文汇总.md
@@ -2,10 +2,11 @@
 | ----  |----  | 
 |NULL |NULL |
 |NULL |NULL |
-|NULL |NULL |
-|NULL |NULL |
-|NULL |NULL |
-|NULL |NULL |
+|《Confucius: Iterative Tool Learning from Introspection Feedback by Easy-to-Difficult Curriculum》 |文本大模型增强与应用 |
+|《AGENTTUNING: ENABLING GENERALIZED AGENT ABILITIES FOR LLMS》 |文本大模型增强与应用 |
+|《ToolRerank: Adaptive and Hierarchy-Aware Reranking for Tool Retrieval》 |文本大模型增强与应用 |
+|《InfLLM: Unveiling the Intrinsic Capacity of LLMs for Understanding Extremely Long Sequences with Training-Free Memory》 |文本大模型增强与应用 |
+|2024-《ModelScope-Agent: Building Your Customizable Agent System with Open-source Large Language Models》 |文本大模型增强与应用 |
 | 《T-Eval: Evaluating the Tool Utilization Capability of Large Language Models Step by Step》 |文本大模型评测 |
 | 《TASKBENCH: BENCHMARKING LARGE LANGUAGE MODELS FOR TASK AUTOMATION》 |文本大模型评测 |
 |《GPT-FATHOM: BENCHMARKING LARGE LANGUAGE MODELS TO DECIPHER THE EVOLUTIONARY PATH TOWARDS GPT-4 AND BEYOND》|文本大模型评测|
