--- a/大模型评测.md
+++ b/大模型评测.md
@@ -2,6 +2,7 @@
 |  ----  | ----  |----  | ----  |----  |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
+| 《StableToolBench: Towards Stable Large-Scale Benchmarking on Tool Learning of Large Language Models》 | arxiv2024 | 稳定的大模型工具能力评测：<br/>1 用缓存+GPT-4模拟API响应<br/>2 用GPT-4对最终任务完成情况做评判<br/>3 主要在ToolBench基础上开展优化 | NULL | NULL |
 | 《AlpacaFarm: A Simulation Framework for Methods that Learn from Human Feedback》| arxiv2023| 斯坦福的AlpacaFarm：快速构建并评测RHLF类模型<br/>1 基于LLMs对pairwise的数据进行标注，用于后续RLHF模型训练；<br/>2 基于LLMs对训练好的模型进行评测；<br/>3 预置了一些Reference Methods；| NULL | 机器学习社区：RLHF 的平替登场！斯坦福开源「羊驼农场」模拟器！ |
 | 《TASKBENCH: BENCHMARKING LARGE LANGUAGE MODELS FOR TASK AUTOMATION》| arxiv2023| 任务拆解数据构建和评测：<br/>1 数据构建（DATASET CONSTRUCTION）：<br/>-基于resource and temporal dependencies手工来构建图：工具来源Hugging Face，Multimedia，Daily Life APIs<br/>-基于Node、Chain、DAG维度进行采样，然后生成Instruct（BACK-INSTRUCT）；<br/>-评估质量；<br/>2 能力评估（TASKEVAL）：<br/>-进行TASK DECOMPOSITION、TOOL INVOCATION、PARAMETER PREDICTION三个维度的评估（一个Prompt，一次推理完成）；<br/>-对比人类评估和数据集评估的一致性；<br/>-分析和模型任务拆解能力相关的因素；<br/>3 启示<br/>-基于候选工具确认任务拆解的粒度| NULL | NULL |
 | 《T-Eval: Evaluating the Tool Utilization Capability of Large Language Models Step by Step》| arxiv2024| 智能体评测榜单：https://open-compass.github.io/T-Eval/leaderboard_zh.html<br/>1 核心维度：<br/>-PLAN：规划（拆解多个步骤）<br/>-REASON：当前步骤<br/>-RETRIEVE：API选择<br/>-UNDERSTAND：参数填充<br/>-INSTRUCT:最需要执行的动作做总结<br/>-REVIEW：判断是否可以工具使用能够完成用户的需求<br/>2 工具来源和数量<br/>-来自ToolBench（论文 TooLLLM）<br/>-23,305 testcases in total<br/>3 商用大模型和开源大模型对比评测和分析<br/>-首先要follow格式（很多模型做不到）<br/>-follow格式和能够执行任务没有特别的相关性 | NULL | NULL |
