--- a/通用基础大语言模型.md
+++ b/通用基础大语言模型.md
@@ -26,6 +26,7 @@
 | 《OpenAssistant Conversations - Democratizing Large Language Model Alignment》 | arxiv2023 | 非盈利组织LAION公司的开源大模型：<br/>1 LAION公司为Stable Diffusion公司提供了数据；<br/>2 文章的重点在对数据的介绍，模型相关的细节不多；<br/>3 SFT模型：Pythia-12B、LLaMA-13B、LLaMA-30B；<br/>4 PM模型：Pythia-1.4B、Pythia-12B；LLaMA-30B（计划）；<br/>5 PPO训练框架基于TRLX； | NULL | NULL|
 | 《RRHF: Rank Responses to Align Language Models with Human Feedback without tears》| arXiv2023| 阿里达摩院的RRHF：<br/>1 不使用强化学习实现RLHF；<br/>2 传统的方法使用4个模型：LanguageModel、ValueModel、RewardModel、ReferenceModel，RRHF只使用2个：LanguageModel、RewardModel；<br/>3 核心思想是使用LanguageModel对其他模型（或者策略）生成的结果打分，和ReferenceModel的打分尽量一致；<br/>4 从实现效果看RRHF效果略好过PPO的方式；| NULL | NULL |
 | 《A Survey of Large Language Models》 | arXiv2023 | 大模型综述：作者主要来自人民大学高瓴人工智能学院（v9,20230428）<br/>1 INTRODUCTION<br/>2 OVERVIEW<br/>2.1 Background for LLMs<br/>2.2 Technical Evolution of GPT-series Models<br/>3 RESOURCES OF LLMS<br/>3.1 Publicly Available Model Checkpoints or APIs<br/>3.2 Commonly Used Corpora<br/>3.3 Library Resource<br/>4 PRE-TRAINING<br/>4.1 Data Collection<br/>4.2 Architecture<br/>4.3 Model Training<br/>5 ADAPTATION TUNING OF LLMS<br/>5.1 Instruction Tuning<br/>5.2 Alignment Tuning<br/>5.3 Efficient Tuning<br/>6 UTILIZATION<br/>6.1 In-Context Learning<br/>6.2 Chain-of-Thought Prompting<br/>7 CAPACITY EVALUATION<br/>7.1 Basic Evaluation Tasks<br/>7.2 Advanced Ability Evaluation<br/>7.3 Public Benchmarks and Empirical Analysis<br/>8 CONCLUSION AND FUTURE DIRECTIONS | NULL | LLM+人工校对中文版：https://github.com/RUCAIBox/LLMSurvey/blob/main/assets/LLM_Survey_Chinese_0418.pdf |
+| 《Direct Preference Optimization:Your Language Model is Secretly a Reward Model》 | arxiv2023 | NULL | DPO:<br/>1 DPO只使用了2个模型（Policy Model+Reference Model），RLHF使用了4个（Policy Model+Reference Model+Reward Model+Critic Model）；<br/>2 训练语料为三元组：用户prompt，良好回答win，一般回答lose；<br/>3 损失函数能够明显的体现出良好回复和一般回复对最终目标的影响；<br/>4 相比与SFT，除了良好的回复反馈外，还有一般的回复反馈；<br/>5 是否有像RLHF一样（强化学习），对过程无监督，保障生成结果多样性的机制？<br/>6 设计较多原理推导，不怎么看得懂； | mengrennwpu：LLM面面观之RLHF平替算法DPO |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
