--- a/论文汇总.md
+++ b/论文汇总.md
@@ -2,6 +2,16 @@
 | ----  |----  | 
 |NULL |NULL |
 |NULL |NULL |
+|NULL |NULL |
+|NULL |NULL |
+|《NexusRaven: a Commercially-Permissive Language Model for Function Calling》 |文本大模型增强与应用 |
+|《Octopus v2: On-device language model for super agent》 |文本大模型增强与应用 |
+|《Direct Preference Optimization:Your Language Model is Secretly a Reward Model》 |通用基础大语言模型 |
+|《ReALM: Reference Resolution As Language Modeling》 |文本大模型增强与应用 |
+|《KwaiAgents: Generalized Information-seeking Agent System with Large Language Models》 |文本大模型增强与应用 |
+|《StableToolBench: Towards Stable Large-Scale Benchmarking on Tool Learning of Large Language Models》 |文本大模型评测 |
+|《AIOS: LLM Agent Operating System》 |文本大模型增强与应用 |
+|《Advancing Transformer Architecture in Long-Context Large Language Models:A Comprehensive Survey》 |文本长度扩展 |
 |《Confucius: Iterative Tool Learning from Introspection Feedback by Easy-to-Difficult Curriculum》 |文本大模型增强与应用 |
 |《AGENTTUNING: ENABLING GENERALIZED AGENT ABILITIES FOR LLMS》 |文本大模型增强与应用 |
 |《ToolRerank: Adaptive and Hierarchy-Aware Reranking for Tool Retrieval》 |文本大模型增强与应用 |
