--- a/通用基础大语言模型.md
+++ b/通用基础大语言模型.md
@@ -16,12 +16,15 @@
 | DeepMind  | DeepMind |DeepMind |DeepMind |DeepMind |
 | 《Solving math word problems with processand outcome-based feedback》| arxiv2022| DeepMind优化大模型解决数学问题的能力：<br/>1 Outcome-based and process-based approaches lead to similar final-answer error rates（这个结论和OpenAI的结论是不一致的）；<br/>2 Both process- and outcome-supervised reward models learn to emulate process-based feedback；<br/>3 Low trace error requires either process-based feedback, or a reward model that emulates it；| NULL | NULL |
 | 《Improving alignment of dialogue agents via targeted human judgements》| arxiv2022| DeepMind的Sparrow语言模型：<br/>1 融合了Lambda模型的外部知识，和InstructGPT的RLHF；<br/>2 基础模型基于Chinchilla；| NULL | NULL |
+| 《Gemini: A Family of Highly Capable Multimodal Models》 | arxiv2023 | Google/DeepMind端到端多模态大模型（行业收个）：<br/>	模型大小：Ultra，Pro，Nano（1.8B，3.25B）<br/>输入模态：image, audio, video, and text<br/>输出模态：image，text<br/>支持长度：32k<br/>图片输入：natural images, charts, screenshots, PDFs<br/>视频输入：Video frames or images can be interleaved naturally with text or audio as part of the model input<br/>数据管理方面：过滤有害内容<br/>图文输出：Gemini models can output multiple images interleaved with text given a prompt composed of image and text<br/>训练过程：PreTrain-SFT-RLHF | NULL | NULL |
 | Meta  | Meta |Meta |Meta |Meta |
 | 《LLaMA: Open and Efficient Foundation Language Models》| facebook research 2023| Meta的LLaMA模型：<br/>1 Meta的高效率大模型（参数更小）；<br/>2 LLaMA-13B对标GPT-3(175B)；<br/>3 LLaMA-65B对标Chinchilla70B and PaLM-540B；<br/>4 核心是数据量的和计算量的提升（原理和Deepmind的Chinchilla基本一致）；| NULL | Meta发布全新大语言模型，号称比ChatGPT更强，单GPU上就能跑，后续或将开源 |
 | 《PEER: A Collaborative Language Model》| arxiv2022| Meta的PEEK：<br/>1 交互式文本编辑语言模型；<br/>2 训练数据来源维基百科的更新历史和自己的数据增强；<br/>3 整体上和InstructGPT（text-davinc-001）相比，在个别场景优势不明显；| NULL | NULL |
 | Anthropic  | Anthropic |Anthropic |Anthropic |Anthropic |
 | 《Training a Helpful and Harmless Assistant with Reinforcement Learning from Human Feedback》 | arxiv2022 | Anthropic对话大模型实现：<br/>1 主要侧重了Helpful和Harmfulless，Honest较少（比如单纯的Helpful vs Helpful+Harmfulless的对比）；<br/>2 有red-team专门针对Harmful开展工作；<br/>3 Align tax随着模型规模变大，变的不明显；<br/>4 整体看起来比较累，太多的实验细节（对实际工作也更有帮助）； | NULL | 苏打：ChatGPT技术精要，RLHF相关论文笔记（三）—— a Helpful and Harmless Assistant with Reinforcement Learning from Human |
 | 《Constitutional AI: Harmlessness from AI Feedback》| arxiv2022| Anthropic公司的模型（创始团队来自OpenAI，新产品Claude）：<br/>1 整体设计思路和InstructGPT差不多（SFT、RM、RLHF）；<br/>2 SFT阶段引入了Constitutional AI机制，核心是对harmless的内容的处理（harmless、honest、helpful），基于Critique/Revision；<br/>3 使用PM替换了RM（PM使用的数据部分是Constitutional AI自动生成的）； | NULL | 参考：网页链接
+| Apple  | Apple |Apple |Apple |Apple |
+| 《Apple Intelligence Foundation Language Models》 | arxiv2024 | Apple Intelligence模型介绍：<br/>1 AFM-on-device 大约3B；<br/>2 AFM-server 参数未知，基础长度4k，8k持续预训练，长文本32k；<br/>3 涉及的参考技术点：<br/>-架构设计（transformer优化、小型化优化、长文本优化）；<br/>-预训练（数据配比）<br/>-SFT<br/>-RLHF（Iterative teaching committee）<br/>-基于LoRA的适配层 | NULL | NULL |
 | 其他  | NULL |NULL |NULL |NULL |
 | 《OpenAssistant Conversations - Democratizing Large Language Model Alignment》 | arxiv2023 | 非盈利组织LAION公司的开源大模型：<br/>1 LAION公司为Stable Diffusion公司提供了数据；<br/>2 文章的重点在对数据的介绍，模型相关的细节不多；<br/>3 SFT模型：Pythia-12B、LLaMA-13B、LLaMA-30B；<br/>4 PM模型：Pythia-1.4B、Pythia-12B；LLaMA-30B（计划）；<br/>5 PPO训练框架基于TRLX； | NULL | NULL|
 | 《RRHF: Rank Responses to Align Language Models with Human Feedback without tears》| arXiv2023| 阿里达摩院的RRHF：<br/>1 不使用强化学习实现RLHF；<br/>2 传统的方法使用4个模型：LanguageModel、ValueModel、RewardModel、ReferenceModel，RRHF只使用2个：LanguageModel、RewardModel；<br/>3 核心思想是使用LanguageModel对其他模型（或者策略）生成的结果打分，和ReferenceModel的打分尽量一致；<br/>4 从实现效果看RRHF效果略好过PPO的方式；| NULL | NULL |
