--- a/论文汇总.md
+++ b/论文汇总.md
@@ -4,6 +4,11 @@
 |NULL |NULL |
 |NULL |NULL |
 |NULL |NULL |
+|NULL |NULL |
+|《Apple Intelligence Foundation Language Models》 |通用基础大语言模型 |
+|《Gemini: A Family of Highly Capable Multimodal Models》 |通用基础大语言模型 |
+|《MemoryBank: Enhancing Large Language Models with Long-Term Memory》 |文本大模型增强与应用 |
+|《Small LLMs Are Weak Tool Learners: A Multi-LLM Agent》 |文本大模型增强与应用 |
 |《NexusRaven: a Commercially-Permissive Language Model for Function Calling》 |文本大模型增强与应用 |
 |《Octopus v2: On-device language model for super agent》 |文本大模型增强与应用 |
 |《Direct Preference Optimization:Your Language Model is Secretly a Reward Model》 |通用基础大语言模型 |
